# serde-fallback

./: Cargo.toml
examples/: simple.rs
src/: lib.rs
